[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[sub_resource type="Theme" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.247059, 0.231373, 0.231373, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
margin_left = 107.0
margin_top = 33.0
margin_right = 213.0
margin_bottom = 147.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Background/CenterContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 14.0
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 106.0
margin_bottom = 24.0

[node name="ResumeButton" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 106.0
margin_bottom = 54.0
theme = SubResource( 1 )
text = "Resume Game"

[node name="MainMenuButton" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 106.0
margin_bottom = 84.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 106.0
margin_bottom = 114.0
theme = SubResource( 2 )
text = "Quit"

[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
